[gd_scene load_steps=10 format=2]

[ext_resource path="res://areas/house1.gd" type="Script" id=1]
[ext_resource path="res://HouseTiles128x128/HouseTileset.tres" type="TileSet" id=2]
[ext_resource path="res://NPC/NPC.tscn" type="PackedScene" id=3]
[ext_resource path="res://NPC/QuestNPC.tscn" type="PackedScene" id=4]
[ext_resource path="res://particles/chests/Chests.gd" type="Script" id=5]
[ext_resource path="res://particles/chests/chest1.tscn" type="PackedScene" id=6]
[ext_resource path="res://particles/MoveArea/MoveArea.gd" type="Script" id=7]
[ext_resource path="res://particles/MoveArea/MoveArea.tscn" type="PackedScene" id=8]
[ext_resource path="res://particles/SwitchArea/SwitchArea.tscn" type="PackedScene" id=9]

[node name="house1" type="Node2D" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="floor" type="TileMap" parent="." index="0"]

mode = 1
tile_set = ExtResource( 2 )
cell_size = Vector2( 128, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -1245167, 36, 0, -1179631, 36, 0, -1179630, 36, 0, -1114107, 6, 0, -1114106, 6, 0, -1114105, 6, 0, -1114104, 6, 0, -1114103, 6, 0, -1114102, 6, 0, -1114101, 6, 0, -1114100, 6, 0, -1114099, 6, 0, -1114098, 6, 0, -1114097, 6, 0, -1048571, 6, 0, -1048570, 6, 0, -1048569, 6, 0, -1048568, 6, 0, -1048567, 6, 0, -1048566, 6, 0, -1048565, 6, 0, -1048564, 6, 0, -1048563, 6, 0, -1048562, 6, 0, -1048561, 6, 0, -1048559, 6, 0, -983036, 6, 0, -983035, 6, 0, -983034, 6, 0, -983033, 6, 0, -983032, 6, 0, -983031, 6, 0, -983030, 6, 0, -983029, 6, 0, -983028, 6, 0, -983027, 6, 0, -983026, 6, 0, -983025, 6, 0, -983024, 6, 0, -983023, 6, 0, -983022, 6, 0, -917499, 6, 0, -917498, 6, 0, -917497, 6, 0, -917496, 6, 0, -917495, 6, 0, -917494, 6, 0, -917493, 6, 0, -917492, 6, 0, -917491, 6, 0, -917490, 6, 0, -917489, 6, 0, -917488, 6, 0, -917487, 6, 0, -917486, 6, 0, -851963, 6, 0, -851962, 6, 0, -851961, 6, 0, -851960, 6, 0, -851959, 6, 0, -851958, 6, 0, -851957, 6, 0, -851956, 6, 0, -851955, 6, 0, -851954, 6, 0, -851953, 6, 0, -851952, 6, 0, -851951, 6, 0, -851950, 6, 0, -786427, 6, 0, -786426, 6, 0, -786425, 6, 0, -786424, 6, 0, -786423, 6, 0, -786422, 6, 0, -786421, 6, 0, -786420, 6, 0, -786414, 6, 0, -720891, 6, 0, -720890, 6, 0, -720889, 6, 0, -720888, 6, 0, -720887, 6, 0, -655355, 6, 0, -655354, 6, 0, -655353, 6, 0, -655352, 6, 0, -655351, 6, 0, -589819, 6, 0, -589818, 6, 0, -589817, 6, 0, -589816, 6, 0, -589815, 6, 0, -524283, 6, 0, -524282, 6, 0, -524281, 6, 0, -524280, 6, 0, -524279, 6, 0, -458748, 6, 0, -458747, 6, 0, -458746, 6, 0, -458745, 6, 0, -458744, 6, 0, -458743, 6, 0, -393212, 6, 0, -393211, 6, 0, -393210, 6, 0, -393209, 6, 0, -393208, 6, 0, -393207, 6, 0, -327676, 6, 0, -327675, 6, 0, -327674, 6, 0, -327673, 6, 0, -327672, 6, 0, -327671, 6, 0, -262140, 6, 0, -262139, 6, 0, -262138, 6, 0, -262137, 6, 0, -262136, 6, 0, -262135, 6, 0, -196604, 6, 0, -196603, 6, 0, -196602, 6, 0, -196601, 6, 0, -196600, 6, 0, -196599, 6, 0, -131068, 36, 0 )
_sections_unfolded = [ "Cell" ]

[node name="walls" type="TileMap" parent="." index="1"]

editor/display_folded = true
mode = 1
tile_set = ExtResource( 2 )
cell_size = Vector2( 128, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -1179644, 13, 0, -1179643, 20, 0, -1179642, 23, 0, -1179641, 20, 0, -1179640, 20, 0, -1179639, 20, 0, -1179638, 13, 0, -1179637, 20, 0, -1179636, 20, 0, -1179635, 23, 0, -1179634, 20, 0, -1179633, 20, 0, -1179632, 20, 0, -1179631, 24, 0, -1114108, 24, 0, -1114102, 24, 0, -1114095, 24, 0, -1048572, 24, 0, -1048571, 30, 0, -1048570, 28, 0, -1048569, 29, 0, -1048566, 24, 0, -1048559, 24, 0, -983036, 27, 0, -983035, 30, 0, -983034, 28, 0, -983033, 29, 0, -983030, 26, 0, -983023, 24, 0, -917500, 24, 0, -917494, 24, 0, -917487, 24, 0, -851964, 24, 0, -851958, 24, 0, -851951, 24, 0, -786428, 24, 0, -786422, 24, 0, -786416, 5, 0, -720892, 13, 0, -720891, 20, 0, -720890, 22, 0, -720889, 20, 0, -720888, 20, 0, -720887, 20, 0, -720886, 13, 0, -720885, 20, 0, -720884, 20, 0, -720883, 20, 0, -720882, 20, 0, -720881, 20, 0, -655356, 24, 0, -655350, 24, 0, -589820, 24, 0, -589814, 27, 0, -524284, 24, 0, -524283, 30, 0, -524282, 28, 0, -524281, 29, 0, -524278, 27, 0, -458748, 27, 0, -458747, 30, 0, -458746, 28, 0, -458745, 29, 0, -458742, 24, 0, -393212, 24, 0, -393206, 24, 0, -327676, 24, 0, -327670, 26, 0, -262140, 24, 0, -262134, 24, 0, -196604, 24, 0, -196599, 5, 0, -131068, 20, 0, -131067, 20, 0, -131066, 23, 0, -131065, 23, 0, -131064, 20, 0, -131063, 20, 0 )
_sections_unfolded = [ "Cell" ]
__meta__ = {
"_edit_lock_": true
}

[node name="YSort" type="YSort" parent="walls" index="0"]

sort_enabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="fill" type="TileMap" parent="." index="2"]

editor/display_folded = true
mode = 1
tile_set = ExtResource( 2 )
cell_size = Vector2( 128, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = true
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -2490363, 39, 0, -2490360, 39, 0, -2359306, 39, 0, -2359302, 39, 0, -2359299, 39, 0, -2424831, 39, 0, -2359284, 39, 0, -2228237, 39, 0, -2228230, 39, 0, -2293752, 39, 0, -2228208, 39, 0, -2097163, 39, 0, -2162684, 39, 0, -2031633, 39, 0, -2031629, 39, 0, -2097133, 39, 0, -1966087, 39, 0, -1966085, 39, 0, -1966084, 39, 0, -2031616, 39, 0, -1900563, 39, 0, -1966073, 39, 0, -1966069, 39, 0, -1835022, 39, 0, -1835019, 39, 0, -1900531, 39, 0, -1769473, 39, 0, -1834991, 39, 0, -1834986, 39, 0, -1638406, 39, 0, -1703933, 39, 0, -1572881, 39, 0, -1572876, 39, 0, -1638398, 39, 0, -1638397, 39, 0, -1638396, 39, 0, -1638395, 39, 0, -1638394, 39, 0, -1638393, 39, 0, -1638392, 39, 0, -1638391, 39, 0, -1638376, 39, 0, -1572863, 39, 0, -1572861, 39, 0, -1572859, 39, 0, -1572857, 39, 0, -1572856, 39, 0, -1572855, 39, 0, -1572854, 39, 0, -1572853, 39, 0, -1572844, 39, 0, -1441806, 39, 0, -1441801, 39, 0, -1441794, 39, 0, -1441777, 39, 0, -1441765, 39, 0, -1245202, 39, 0, -1245188, 39, 0, -1310718, 36, 0, -1310717, 36, 0, -1310716, 36, 0, -1310715, 36, 0, -1310714, 36, 0, -1310713, 36, 0, -1310712, 36, 0, -1310711, 36, 0, -1310710, 36, 0, -1310709, 36, 0, -1310708, 36, 0, -1310707, 36, 0, -1310706, 36, 0, -1310705, 36, 0, -1310704, 36, 0, -1310703, 36, 0, -1310702, 39, 0, -1310701, 36, 0, -1310697, 39, 0, -1179660, 39, 0, -1179654, 39, 0, -1179653, 39, 0, -1245182, 36, 0, -1245181, 36, 0, -1245180, 36, 0, -1245179, 36, 0, -1245178, 36, 0, -1245177, 36, 0, -1245176, 36, 0, -1245175, 36, 0, -1245174, 36, 0, -1245173, 36, 0, -1245172, 36, 0, -1245171, 36, 0, -1245170, 36, 0, -1245169, 36, 0, -1245168, 36, 0, -1245167, 36, 0, -1245166, 36, 0, -1245165, 36, 0, -1179646, 36, 0, -1179645, 36, 0, -1179630, 36, 0, -1179629, 36, 0, -1179620, 39, 0, -1048582, 39, 0, -1114110, 36, 0, -1114109, 36, 0, -1114094, 36, 0, -1114093, 39, 0, -1114087, 39, 0, -1114081, 39, 0, -983061, 39, 0, -983046, 39, 0, -1048574, 36, 0, -1048573, 36, 0, -1048558, 36, 0, -1048557, 36, 0, -917520, 39, 0, -917515, 39, 0, -917509, 39, 0, -983038, 36, 0, -983037, 36, 0, -983022, 36, 0, -983021, 36, 0, -983008, 39, 0, -851987, 39, 0, -917502, 36, 0, -917501, 36, 0, -917486, 36, 0, -917485, 39, 0, -786444, 39, 0, -786437, 39, 0, -851966, 36, 0, -851965, 36, 0, -851950, 36, 0, -851949, 39, 0, -851944, 39, 0, -786430, 36, 0, -786429, 36, 0, -786414, 36, 0, -786413, 36, 0, -786402, 39, 0, -655381, 39, 0, -655366, 39, 0, -720894, 36, 0, -720893, 36, 0, -720878, 36, 0, -720877, 36, 0, -720861, 39, 0, -589840, 39, 0, -589834, 39, 0, -655358, 36, 0, -655357, 36, 0, -655349, 36, 0, -655348, 36, 0, -655347, 36, 0, -655346, 36, 0, -655345, 36, 0, -655344, 36, 0, -655343, 36, 0, -655342, 36, 0, -655341, 39, 0, -655334, 39, 0, -524302, 39, 0, -524294, 39, 0, -524293, 39, 0, -589822, 36, 0, -589821, 36, 0, -589813, 36, 0, -589812, 36, 0, -589811, 36, 0, -589810, 36, 0, -589809, 36, 0, -589808, 36, 0, -589807, 36, 0, -589806, 36, 0, -589805, 36, 0, -589791, 39, 0, -458771, 39, 0, -524286, 36, 0, -524285, 36, 0, -524277, 36, 0, -524276, 36, 0, -524275, 36, 0, -524274, 36, 0, -524273, 36, 0, -524272, 36, 0, -524271, 36, 0, -524270, 36, 0, -524269, 39, 0, -393222, 39, 0, -458750, 36, 0, -458749, 36, 0, -458741, 36, 0, -458740, 36, 0, -458739, 36, 0, -458733, 39, 0, -458728, 39, 0, -458715, 39, 0, -327702, 39, 0, -327686, 39, 0, -393214, 36, 0, -393213, 36, 0, -393205, 36, 0, -393204, 36, 0, -393203, 39, 0, -393185, 39, 0, -262161, 39, 0, -262155, 39, 0, -327678, 36, 0, -327677, 36, 0, -327669, 36, 0, -327668, 36, 0, -327667, 36, 0, -196613, 39, 0, -262142, 36, 0, -262141, 36, 0, -262133, 36, 0, -262132, 36, 0, -262131, 36, 0, -262124, 39, 0, -262110, 39, 0, -131081, 39, 0, -196606, 36, 0, -196605, 36, 0, -196597, 36, 0, -196596, 36, 0, -196595, 39, 0, -196582, 39, 0, -196568, 39, 0, -65555, 39, 0, -131070, 36, 0, -131069, 36, 0, -131061, 36, 0, -131060, 36, 0, -131059, 36, 0, -131035, 39, 0, -13, 39, 0, -65534, 36, 0, -65533, 36, 0, -65532, 36, 0, -65531, 36, 0, -65530, 36, 0, -65529, 36, 0, -65528, 36, 0, -65527, 36, 0, -65526, 36, 0, -65525, 36, 0, -65524, 36, 0, -65523, 39, 0, -65507, 39, 0, -65504, 39, 0, -65497, 39, 0, 65530, 39, 0, 2, 36, 0, 3, 36, 0, 4, 36, 0, 5, 36, 0, 6, 36, 0, 7, 36, 0, 8, 36, 0, 9, 36, 0, 10, 36, 0, 11, 36, 0, 12, 36, 0, 13, 36, 0, 19, 39, 0, 65538, 36, 0, 65539, 36, 0, 65540, 36, 0, 65541, 36, 0, 65542, 36, 0, 65543, 36, 0, 65544, 36, 0, 65545, 36, 0, 65546, 36, 0, 65547, 36, 0, 65548, 36, 0, 65549, 36, 0, 65559, 39, 0, 196606, 39, 0, 131085, 39, 0, 131110, 39, 0, 262129, 39, 0, 262135, 39, 0, 196612, 39, 0, 196613, 39, 0, 196630, 39, 0, 196638, 39, 0, 262146, 39, 0, 262147, 39, 0, 262150, 39, 0, 262153, 39, 0, 393212, 39, 0, 327688, 39, 0, 327698, 39, 0, 327712, 39, 0, 458741, 39, 0, 393241, 39, 0, 393251, 39, 0, 589819, 39, 0, 524289, 39, 0, 524301, 39, 0, 589835, 39, 0, 589838, 39, 0, 589854, 39, 0, 655366, 39, 0, 655382, 39, 0, 786424, 39, 0, 786431, 39, 0, 720923, 39, 0, 983036, 39, 0, 917506, 39, 0, 917515, 39, 0, 917522, 39, 0, 917529, 39, 0, 917532, 39, 0, 983052, 39, 0, 1179647, 39, 0, 1114119, 39, 0, 1114133, 39, 0, 1179664, 39, 0, 1245185, 39, 0, 1245192, 39, 0, 1245204, 39, 0, 1245209, 39, 0, 1376270, 39, 0, 1376279, 39, 0, 1507333, 39, 0, 1507346, 39, 0, 1638410, 39, 0, 1638411, 39, 0, 1769487, 39, 0 )
_sections_unfolded = [ "Cell" ]
__meta__ = {
"_edit_lock_": true
}

[node name="NPC" parent="fill" index="0" instance=ExtResource( 3 )]

position = Vector2( 1356.82, -136.953 )

[node name="NPC2" parent="fill" index="1" instance=ExtResource( 3 )]

position = Vector2( 1200.31, -202.163 )

[node name="QuestNPC" parent="fill" index="2" instance=ExtResource( 4 )]

position = Vector2( 951.651, -100.689 )

[node name="Chests" type="Node2D" parent="fill" index="3"]

script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="chest1" parent="fill/Chests" index="0" instance=ExtResource( 6 )]

position = Vector2( 1804.32, -146.505 )

[node name="chest2" parent="fill/Chests" index="1" instance=ExtResource( 6 )]

position = Vector2( 1963.32, -56.8481 )

[node name="chest3" parent="fill/Chests" index="2" instance=ExtResource( 6 )]

position = Vector2( 1792.94, 24.6385 )

[node name="chest4" parent="fill/Chests" index="3" instance=ExtResource( 6 )]

position = Vector2( 1632.92, -79.0891 )

[node name="MoveAreas" type="Node2D" parent="." index="3"]

editor/display_folded = true
position = Vector2( 14.3539, -4.1011 )
script = ExtResource( 7 )

[node name="DoorArea" parent="MoveAreas" index="0" instance=ExtResource( 8 )]

position = Vector2( 943.51, 256.397 )
scale = Vector2( 2.27816, 3.05247 )

[node name="DoorTimer" type="Timer" parent="MoveAreas/DoorArea" index="1"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="SwitchAreas" type="Node2D" parent="." index="4"]

editor/display_folded = true
position = Vector2( 45.1122, -8.20224 )

[node name="SwitchArea1" parent="SwitchAreas" index="0" instance=ExtResource( 9 )]

position = Vector2( 1016.58, -25.5995 )
scale = Vector2( 1.48338, 2.02124 )

[node name="SwitchArea2" parent="SwitchAreas" index="1" instance=ExtResource( 9 )]

position = Vector2( 1449.63, -28.1032 )
scale = Vector2( 1.48338, 2.02124 )

[node name="SwitchArea3" parent="SwitchAreas" index="2" instance=ExtResource( 9 )]

position = Vector2( 817.851, 294.289 )
scale = Vector2( 1.48338, 2.02124 )

[connection signal="body_shape_entered" from="fill/Chests/chest1" to="fill/Chests" method="_on_chest1_body_shape_entered"]

[connection signal="body_shape_exited" from="fill/Chests/chest1" to="fill/Chests" method="_on_chest1_body_shape_exited"]

[connection signal="body_shape_entered" from="fill/Chests/chest2" to="fill/Chests" method="_on_chest2_body_shape_entered"]

[connection signal="body_shape_exited" from="fill/Chests/chest2" to="fill/Chests" method="_on_chest2_body_shape_exited"]

[connection signal="body_shape_entered" from="fill/Chests/chest3" to="fill/Chests" method="_on_chest3_body_shape_entered"]

[connection signal="body_shape_exited" from="fill/Chests/chest3" to="fill/Chests" method="_on_chest3_body_shape_exited"]

[connection signal="body_shape_entered" from="fill/Chests/chest4" to="fill/Chests" method="_on_chest4_body_shape_entered"]

[connection signal="body_shape_exited" from="fill/Chests/chest4" to="fill/Chests" method="_on_chest4_body_shape_exited"]

[connection signal="body_shape_entered" from="MoveAreas/DoorArea" to="MoveAreas" method="_on_DoorArea_body_shape_entered"]

[connection signal="body_shape_exited" from="MoveAreas/DoorArea" to="MoveAreas" method="_on_DoorArea_body_shape_exited"]

[connection signal="body_shape_entered" from="SwitchAreas/SwitchArea1" to="SwitchAreas/SwitchArea1" method="_on_SwitchArea_body_shape_entered"]

[connection signal="body_shape_exited" from="SwitchAreas/SwitchArea1" to="SwitchAreas/SwitchArea1" method="_on_SwitchArea_body_shape_exited"]

[connection signal="body_shape_entered" from="SwitchAreas/SwitchArea2" to="SwitchAreas/SwitchArea2" method="_on_SwitchArea_body_shape_entered"]

[connection signal="body_shape_exited" from="SwitchAreas/SwitchArea2" to="SwitchAreas/SwitchArea2" method="_on_SwitchArea_body_shape_exited"]

[connection signal="body_shape_entered" from="SwitchAreas/SwitchArea3" to="SwitchAreas/SwitchArea3" method="_on_SwitchArea_body_shape_entered"]

[connection signal="body_shape_exited" from="SwitchAreas/SwitchArea3" to="SwitchAreas/SwitchArea3" method="_on_SwitchArea_body_shape_exited"]


